--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.8",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.4.15",
+    "pdfkit": "^0.12.1",
     "qrcode": "^1.4.4",
     "stripe": "^8.126.0",
     "uuid": "^8.3.1"
